k8s/dev/cluster-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: cluster-redis-deployment
   labels:
      app: cluster-redis
spec:
   replicas: 1
   selector:
      matchLabels:
         app: cluster-redis
   template:
      metadata:
         labels:
            app: cluster-redis
      spec:
         containers:
            - name: cluster-redis
              image: redis:5.0.8
              ports:
                 - containerPort: 6379
              volumeMounts:
                 - name: cluster-redis-storage
                   mountPath: /data
         volumes:
            - name: cluster-redis-storage
              persistentVolumeClaim:
                 claimName: cluster-redis-pvc
