k8s/dev/engine-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: engine-core-deployment
   labels:
      app: engine-core
spec:
   replicas: 1
   selector:
      matchLabels:
         app: engine-core
   template:
      metadata:
         labels:
            app: engine-core
      spec:
         containers:
            - name: engine-core
              image: agnost-enterprise/engine-core
              # We will be using the minikube docker daemon, since the actual docker daemon on local machine are different
              # Prevent minikube docker daemon to pull images from central docker hub set imagePullPolicy to Never, so that
              # it uses the image put in minikube's docker environment, see dev.sh script how we change the docker context to minikube
              imagePullPolicy: Never
              ports:
                 - containerPort: 4000
