k8s/dev/engine-realtime-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
   name: engine-realtime-deployment
   labels:
      app: engine-realtime
spec:
   replicas: 1
   selector:
      matchLabels:
         app: engine-realtime
   template:
      metadata:
         labels:
            app: engine-realtime
      spec:
         containers:
            - name: engine-realtime
              image: agnost-enterprise/engine-realtime
              imagePullPolicy: Never
              ports:
                 - containerPort: 4000
