k8s/dev/engine-scheduler-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
   name: engine-scheduler-deployment
   labels:
      app: engine-scheduler
spec:
   replicas: 1
   selector:
      matchLabels:
         app: engine-scheduler
   template:
      metadata:
         labels:
            app: engine-scheduler
      spec:
         containers:
            - name: engine-scheduler
              image: agnost-enterprise/engine-scheduler
              imagePullPolicy: Never
              ports:
                 - containerPort: 4000
