k8s/dev/engine-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: engine-worker-deployment
   labels:
      app: engine-worker
spec:
   replicas: 1
   selector:
      matchLabels:
         app: engine-worker
   template:
      metadata:
         labels:
            app: engine-worker
      spec:
         serviceAccountName: provisioner-sa
         containers:
            - name: engine-worker
              image: agnost-community/engine/worker
              # We will be using the minikube docker daemon, since the actual docker daemon on local machine are different
              # Prevent minikube docker daemon to pull images from central docker hub set imagePullPolicy to Never, so that
              # it uses the image put in minikube's docker environment, see dev.sh script how we change the docker context to minikube
              imagePullPolicy: Never
              ports:
                 - containerPort: 4000
