k8s/dev/platform-sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: platform-sync-deployment
   labels:
      app: platform-sync
spec:
   replicas: 1
   selector:
      matchLabels:
         app: platform-sync
   template:
      metadata:
         labels:
            app: platform-sync
      spec:
         containers:
            - name: platform-sync
              image: agnost-community/platform/sync
              # We will be using the minikube docker daemon, since the actual docker daemon on local machine are different
              # Prevent minikube docker daemon to pull images from central docker hub set imagePullPolicy to Never, so that
              # it uses the image put in minikube's docker environment, see dev.sh script how we change the docker context to minikube
              imagePullPolicy: Never
              ports:
                 - containerPort: 4000
