k8s/dev/studio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: studio-deployment
   labels:
      app: studio
spec:
   replicas: 1
   selector:
      matchLabels:
         app: studio
   template:
      metadata:
         labels:
            app: studio
      spec:
         containers:
            - name: studio
              image: agnost-community/studio
               # We will be using the minikube docker daemon, since the actual docker daemon on local machine are different
               # Prevent minikube docker daemon to pull images from central docker hub set imagePullPolicy to Never, so that
               # it uses the image put in minikube's docker environment, see dev.sh script how we change the docker context to minikube
              imagePullPolicy: Never
              ports:
                 - containerPort: 4000
