k8s/dev/cluster-redis-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
   name: cluster-redis-clusterip-service
spec:
   type: ClusterIP
   selector:
      app: cluster-redis
   ports:
      - port: 6379
        targetPort: 6379
