k8s/dev/engine-core-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
   name: engine-core-clusterip-service
spec:
   type: ClusterIP
   selector:
      app: engine-core
   ports:
      - port: 4000
        targetPort: 4000
