k8s/dev/engine-realtime-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: engine-realtime-clusterip-service
spec:
   type: ClusterIP
   selector:
      app: engine-realtime
   ports:
      - port: 4000
        targetPort: 4000
