k8s/dev/engine-worker-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
   name: engine-worker-clusterip-service
spec:
   type: ClusterIP
   selector:
      app: engine-worker
   ports:
      - port: 4000
        targetPort: 4000
