k8s/dev/platform-core-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
   name: platform-core-clusterip-service
spec:
   type: ClusterIP
   selector:
      app: platform-core
   ports:
      - port: 4000
        targetPort: 4000
