k8s/dev/platform-worker-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
   name: platform-worker-clusterip-service
spec:
   type: ClusterIP
   selector:
      app: platform-worker
   ports:
      - port: 4000
        targetPort: 4000
