k8s/dev/studio-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: studio-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: studio
  ports:
    - port: 4000
      targetPort: 4000
