k8s/dev/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-service
   annotations:
      kubernetes.io/ingress.class: 'nginx'
      nginx.ingress.kubernetes.io/proxy-body-size: 500m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-send-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-read-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: '6000'
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   defaultBackend:
      service:
         name: engine-default-backend-clusterip-service
         port:
            number: 5000
   rules:
      - host: api.development.test
        http:
           paths:
              - path: /
                pathType: Prefix
                backend:
                   service:
                      name: platform-core-clusterip-service
                      port:
                         number: 4000
      - host: sync.development.test
        http:
           paths:
              - path: /
                pathType: Prefix
                backend:
                   service:
                      name: platform-sync-clusterip-service
                      port:
                         number: 4000
      - host: engine.development.test
        http:
           paths:
              - path: /
                pathType: Prefix
                backend:
                   service:
                      name: engine-core-clusterip-service
                      port:
                         number: 4000
      - host: worker.development.test
        http:
           paths:
              - path: /
                pathType: Prefix
                backend:
                   service:
                      name: engine-worker-clusterip-service
                      port:
                         number: 4000
